Fix: Don't override chat scrollbar color

--- a/webui/css/messages.css
+++ b/webui/css/messages.css
@@ -13,7 +13,6 @@
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   scrollbar-width: thin;
-  scrollbar-color: #555 transparent;
 }
 
 #chat-history > *:first-child {
